--- a/README.rdoc
+++ b/README.rdoc
@@ -21,3 +21,24 @@ email: string
 -email must be present
 -email must be unique( since we 'll use this for logins later)
 -email must be vaild
+
+
+Chefs:
+
+What we have already:
+-Chef model and vaildations
+-chef table with colums chefname and email
+
+What we need to do:
+-Add passwords to the chefs table so chefs can be authenticated and logged in
+-Use email as log in credentials, since email is unique
+-Abilty to register new chefs to use the app
+-Ablity to display chefs profile
+-Ablity for chefs to log in and logout of the app
+-Restrict actions like create recipe, edit recipe and like feature to logged in chefs only
+-Restricting edit of recipes by chefs who created the recipes
+
+
+
+
+
