--- a/README.rdoc
+++ b/README.rdoc
@@ -56,3 +56,6 @@ Many to Many Association:
 1.We will implement using has_many through association
 2.Requires a join table
 3.One object/row in one table can be associated with multiple rows in a 2nd table and vice-versa
+
+
+-Add Admin Functionality
