--- a/README.rdoc
+++ b/README.rdoc
@@ -59,3 +59,18 @@ Many to Many Association:
 
 
 -Add Admin Functionality
+
+
+Things you'll need
+
+1. Migration to create reviews table, body, type = text_field, two foreign keys, reference chef_id,reference recipe_id
+2. You'll need to build the review model
+3. You'll need to create tests for the spec, add validate
+4. Build the associations, has_many and belongs_to
+5. Test out associations in rail console
+-recipe.reviews
+-chef.reviews
+6. Create routes
+7. Authenticated chefs can create reviews, before_action require_user
+8. You associate a chef_id and recipe_id
+9. Use existing code if possible.
